--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Feb 18 17:01:56 GMT 2020
-sdk.dir=C\:\\Users\\micha\\AppData\\Local\\Android\\Sdk
+#Fri Feb 21 12:07:09 GMT 2020
+sdk.dir=/home0/scm-studs/t7091808/Android/Sdk
