--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Feb 21 12:07:09 GMT 2020
-sdk.dir=/home0/scm-studs/t7091808/Android/Sdk
+#Mon Feb 24 10:39:43 GMT 2020
+sdk.dir=C\:\\Users\\coco\\AppData\\Local\\Android\\Sdk
