--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 24 10:39:43 GMT 2020
-sdk.dir=C\:\\Users\\coco\\AppData\\Local\\Android\\Sdk
+#Tue Mar 03 11:21:40 GMT 2020
+sdk.dir=/home1/scm-studs/m2023967/Android/Sdk
