--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".collectionActivity" />
-        <activity android:name=".SearchAdapter" />
-        <activity android:name=".DamageSearch" />
-        <activity android:name=".DeliveryyActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".RegisterActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".collectionActivity" />
+        <activity android:name=".SearchAdapter" />
+        <activity android:name=".DamageSearch" />
+        <activity android:name=".DeliveryyActivity"/>
+        <activity android:name=".MainActivity"/>
 
         <activity android:name=".LoginActivity" />
+
         <activity android:name=".JobListActivity" />
     </application>
 
