--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.fleetdynamics">
 
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegisterActivity" >
+        <activity android:name=".JobListActivity"></activity>
+        <activity android:name=".RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,12 +22,9 @@
         <activity android:name=".collectionActivity" />
         <activity android:name=".SearchAdapter" />
         <activity android:name=".DamageSearch" />
-        <activity android:name=".DeliveryyActivity"/>
-        <activity android:name=".MainActivity"/>
-
+        <activity android:name=".DeliveryyActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity" />
-
-        <activity android:name=".JobListActivity" />
     </application>
 
 </manifest>
