--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
 
     <uses-permission android:name="android.permission.INTERNET"/>
+   <user-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <user-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <user-permission android:name="android.permission.STORAGE"/>
+
 
     <application
         android:allowBackup="true"
