--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 03 15:02:51 GMT 2020
-sdk.dir=/home0/scm-studs/t7091808/Android/Sdk
+#Fri Mar 06 20:47:39 GMT 2020
+sdk.dir=C\:\\Users\\Teddy\\AppData\\Local\\Android\\Sdk
