--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.fleetdynamics">
-
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.fleetdynamics">
     <uses-permission android:name="android.permission.INTERNET"/>
-   <user-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <user-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <user-permission android:name="android.permission.STORAGE"/>
+
+
 
 
     <application
