Update on login screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <activity android:name=".collectionActivity" />
         <activity android:name=".SearchAdapter" />
         <activity android:name=".DamageSearch" />
-        <activity android:name=".DeliveryyActivity"></activity>
+        <activity android:name=".DeliveryyActivity"/>
         <activity android:name=".MainActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".JobListActivity" />
