--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 01 15:46:46 BST 2020
-sdk.dir=C\:\\Users\\Teddy\\AppData\\Local\\Android\\Sdk
+#Tue Apr 07 15:11:17 BST 2020
+sdk.dir=C\:\\Users\\micha\\AppData\\Local\\Android\\Sdk
