Storing user profile data into firebase firestore

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 01 15:46:46 BST 2020
-sdk.dir=C\:\\Users\\Teddy\\AppData\\Local\\Android\\Sdk
+#Fri May 01 23:40:41 BST 2020
+sdk.dir=C\:\\Users\\admin\\AppData\\Local\\Android\\Sdk
